# js-mdict

./: .babelrc  .eslintrc  .gitignore  .npmignore  .prettierrc  LICENSE  README.md  eslint.config.mjs  jest.config.js  jest.config.ts  karma.conf.js  out  out2  package-lock.json  package.json  pnpm-lock.yaml  processed.txt  tsconfig.json
.nyc_output/: a8633781-2c7a-4cb7-88b8-2481b8233fc4.json
example/: collins-example.ts  example.js  example01.js  mdd.example.js  new-oxford-en-ch-example.ts  oald7-example.ts  oale8-mdd-example.ts
lib/: MdictBase.js  RecordBlockTable.js  bktree.js  common.js  index.js  key_block_helper.js  lzo-wrapper.js  lzo.js  lzo1x.js  mdict-base.js  mdict-common.js  mdict-parser.js  mdict.js  mdict_base.js  mdictbase.js  mdictmdd.js  measure-util.js  measure_util.js  parser.js  ripemd128.js  scanner.js  test.js  test2.js  testclass.js  utils.js
mdx/: .gitignore  21cent.css  OxfordDictionaries.css  download_mdx_file.txt  mdx_download_url.txt  sf_cb.css  zdz_grammar.css
old/: lzo1x.js  mdict-common.js  mdict-parser.js  ripemd128.js
scripts/: download-test-data.sh
src/: Mdict.js  MdictBase.js  Parser.js  RecordBlockTable.js  Scanner.js  bktree.js  cli.ts  common.js  debug.js  index.js  index.ts  key_block_helper.js  latins.ts  lzo-wrapper.js  lzo.js  lzo1x-v1.js  lzo1x-wrapper.mjs  lzo1x-wrapper.ts  lzo1x.js  lzo1x.ts  mdd.ts  mdict-base.js  mdict-base.ts  mdict-old.js  mdict-parser.js  mdict.js  (+13 more)
src/lzox1-rs/: Cargo.toml  LICENSE_MIT
src/lzox1-rs/libs/lzo1x/: Cargo.toml  README.md
src/lzox1-rs/libs/lzo1x/benches/: bench.rs
src/lzox1-rs/libs/lzo1x/fuzz/: Cargo.toml
src/lzox1-rs/libs/lzo1x/fuzz/fuzz_targets/: fuzz_1.rs  fuzz_1_optimize.rs  fuzz_999.rs
src/lzox1-rs/libs/lzo1x/src/: compress_1.rs  compress_999.rs  config.rs  decompress.rs  lib.rs  optimize.rs  swd.rs
src/lzox1-rs/libs/lzo1x/tests/: test.rs
src/lzox1-rs/libs/lzo1x/tests/fuzz/: crash-28a2691544a8a7d924c29f628253a81723e1a5d2  crash-473a6b31e947e033b066600e097ab0fda1e62ed8  crash-8e855f271031b6ba31529bdd41d7c5571eec732c
src/lzox1-rs/src/: lib.rs
src/lzox1-rs/tests/: decompress.rs
(+154 files in other folders)
