[package]
name = "lzox1-rs"
version = "0.1.0"
authors = ["terasum <terasum@163.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook","std"]
std = []

[dependencies]
wasm-bindgen = "0.2.84"
lzo1x = { path = "./libs/lzo1x" }
rust-lzo = "0.6.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
libc = "0.2.21"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

