[package]
name = "lzo1x"
version = "0.2.0"
authors = ["Justin de Ruiter <justinderuiter@ziggo.nl>"]
edition = "2021"
rust-version = "1.75.0"
description = "Safe Rust port of the LZO1X compression algorithm"
repository = "https://github.com/jussyDr/lzo1x"
license = "GPL-2.0"
keywords = ["lzo"]
categories = ["compression"]
exclude = ["/corpora"]

[[test]]
name = "test"
harness = false

[profile.bench]
debug = true

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
lzo-sys = "0.3.1"
zip = "2.1.0"
